--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -100,7 +100,7 @@
                     <i class="fas fa-list" id="icon"></i>
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
-                    <textarea id="recipe_method" type="text" name="recipe_method" /></textarea>
+                    <textarea id="recipe_method" type="text" name="recipe_method"></textarea>
                     <label for="recipe_method">method</label>
                 </div>
             </div>
