--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
                     {% for step in recipe.recipe_method %}
-                    <input id="recipe_method" name="recipe_method" type="text" value="{{ step }}" class="validate">
+                    <textarea id="recipe_method" name="recipe_method" type="text" value="{{ step }}"></textarea>
                     {% endfor %}
                 </div>
             </div>
