added btn class to buttons on add_recipe

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,6 +55,10 @@ nav .brand-logo {
     width: 200px;
 }
 
+.cat-card {
+    margin-top: 25px;
+}
+
 #rec-style {
     font-size: 18px;
     font-weight: 500;
