--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -92,7 +92,7 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <a href="#" class="add_ing_button"><i class="far fa-plus-square"></i></a>
+                    <a href="#" class="btn add_ing_button"><i class="far fa-plus-square"></i></a>
                 </div>
             </div>
             <div class="row">
@@ -106,12 +106,12 @@
             </div>
             <div class="row">
                 <div class="col s1">
-                    <a href="#" class="add_meth_button"><i class="far fa-plus-square"></i></a>
+                    <a href="#" class="btn add_meth_button"><i class="far fa-plus-square"></i></a>
                 </div>
             </div>
             <div class="row">
                 <div class="col s12 center-align">
-                    <button type="submit">add recipe</button>
+                    <button class="btn" type="submit">add recipe</button>
                 </div>
             </div>
     </div>
