--- a/templates/categories.html
+++ b/templates/categories.html
@@ -12,7 +12,7 @@
             <div class="row">
 
                 <div class="col s12 m4">
-                    <div class="card">
+                    <div class="card cat-card">
                         <div class="card-image">
                             <a href="{{url_for('show_starters') }}"><img src="/static/images/starter.jpg" alt=""></a>
                             <a href="{{url_for('show_starters') }}"
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class="col s12 m4">
-                    <div class="card">
+                    <div class="card cat-card">
                         <div class="card-image hover">
                             <a href="{{url_for('show_mains') }}"><img src="/static/images/mains.jpg" alt=""></a>
                             <a href="{{url_for('show_mains') }}"
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="col s12 m4">
-                    <div class="card">
+                    <div class="card cat-card">
                         <div class="card-image hover">
                             <a href="{{url_for('show_desserts') }}"><img src="/static/images/dessert.jpg" alt=""></a>
                             <a href="{{url_for('show_desserts') }}"
@@ -58,7 +58,7 @@
             <div class="row">
 
                 <div class="col s12 m4">
-                    <div class="card">
+                    <div class="card cat-card">
                         <div class="card-image hover">
                             <a href="{{url_for('show_sides') }}"><img src="/static/images/sides.jpg" alt=""></a>
                             <a href="{{url_for('show_sides') }}"
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="col s12 m4">
-                    <div class="card">
+                    <div class="card cat-card">
                         <div class="card-image hover">
                             <a href="{{url_for('show_cakes') }}"><img src="/static/images/biscuits.jpg" alt=""></a>
                             <a href="{{url_for('show_cakes') }}"
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="col s12 m4">
-                    <div class="card">
+                    <div class="card cat-card">
                         <div class="card-image hover">
                             <a href="{{url_for('show_drinks') }}"><img src="/static/images/drink.jpg" alt=""></a>
                             <a href="{{url_for('show_drinks') }}"
