changed card/display sizing in all categories

--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -10,8 +10,8 @@
         </div>
         <div class="row">
             {% for recipe in recipes %}
-            <div class="col s12 m3">
-                <div class="card ">
+            <div class="col s12 m6 xl4">
+                <div class="card large">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="{{ recipe.recipe_image }}">
                     </div>
