--- a/templates/cakes.html
+++ b/templates/cakes.html
@@ -3,42 +3,39 @@
 
 <div class="container">
     <div class="row">
-        <div class="col s12 xl3">
-
-            <h3 class="center-align">cakes & biscuits</h3>
-        </div>
-        <div class="row">
-            {% for recipe in recipes %}
-            <div class="col s12 m6 xl4">
-                <div class="card large">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="{{ recipe.recipe_image }}">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">{{ recipe.recipe_name }}<i
-                                class="material-icons right"></i></span>
-                        <p><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">{{ recipe.recipe_name }}<i
-                                class="material-icons right">close</i></span>
-                        <!-- will need to remove ingredients and method-->
-                        <p> Category: {{ recipe.category_name }}<br>
-                            Chef: {{ recipe.recipe_chef }}<br>
-                            Cookbook: {{ recipe.recipe_cookbook }}<br>
-                            Difficulty: {{ recipe.recipe_difficulty }}<br>
-                            Cooking Time: {{ recipe.recipe_time }}<br>
-                            <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
-                                class="btn-large green">edit</a>
-                            <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
-                                class="btn-large red">delete</a><br>
-                            <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a>
-                        </p>
-                    </div>
+        <h3 class="center-align">cakes & biscuits</h3>
+    </div>
+    <div class="row">
+        {% for recipe in recipes %}
+        <div class="col s12 m6 xl4">
+            <div class="card large">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="{{ recipe.recipe_image }}">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">{{ recipe.recipe_name }}<i
+                            class="material-icons right"></i></span>
+                    <p><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">{{ recipe.recipe_name }}<i
+                            class="material-icons right">close</i></span>
+                    <!-- will need to remove ingredients and method-->
+                    <p> Category: {{ recipe.category_name }}<br>
+                        Chef: {{ recipe.recipe_chef }}<br>
+                        Cookbook: {{ recipe.recipe_cookbook }}<br>
+                        Difficulty: {{ recipe.recipe_difficulty }}<br>
+                        Cooking Time: {{ recipe.recipe_time }}<br>
+                        <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large green">edit</a>
+                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
+                            class="btn-large red">delete</a><br>
+                        <a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}">Full recipe...</a>
+                    </p>
                 </div>
             </div>
-            {% endfor %}
         </div>
+        {% endfor %}
     </div>
+</div>
 
-    {% endblock%}
+{% endblock%}
