updated url for cookbooks.html

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,12 +10,13 @@
             </div>
             <div class="col s12 l6 center-align">
                 <ul>
-                    <li class="left-align"><a class="land-link" href="{{ url_for('all_recipes') }}">recipes galore!</a>
+                    <li class="left-align"><a class="land-link" href="{{ url_for('all_recipes') }}">recipes from your
+                            favourite chef's!</a>
                     </li>
                     <li class="left-align"><a class="land-link" href="{{ url_for('add_recipe') }}">add your own
-                            favourites!</a></li>
-                    <li class="left-align"><a class="land-link" href="{{ url_for('ing_search') }}">search recipes
-                            by ingredient!</a></li>
+                            favourites recipes!</a></li>
+                    <li class="left-align"><a class="land-link" href="{{ url_for('cookbooks') }}">look for new
+                            cookbooks!</a></li>
                 </ul>
 
             </div>
