added ards to cookbooks.html and for loop

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -15,7 +15,7 @@
                     </li>
                     <li class="left-align"><a class="land-link" href="{{ url_for('add_recipe') }}">add your own
                             favourites recipes!</a></li>
-                    <li class="left-align"><a class="land-link" href="{{ url_for('cookbooks') }}">look for new
+                    <li class="left-align"><a class="land-link" href="{{ url_for('all_books') }}">look for new
                             cookbooks!</a></li>
                 </ul>
 
