--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -5,7 +5,53 @@
     <div class="row">
         <h3 class="center-align">cookbooks</h3>
     </div>
-</div>
 
+    <div class="row card-panel">
+        <form action="{{ url_for('search') }}" method="post" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12">
+                    <i class="fas fa-search prefix"></i>
+                    <input type="text" name="query" id="query" class="validate">
+                    <label for="query">search</label>
+                </div>
+                <div class="col s12 m4">
+                    <button type="submit" class="btn green">
+                        <i class="fas fa-search left"></i>search
+                    </button>
+                    <a href="{{ url_for('all_recipes') }}" class="red btn">reset</a>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="row">
+        {% for book in cookbooks %}
+        <div class="col s12 m6 xl4">
+            <div class="card large">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="{{ book.cookbook_image }}">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator" id="rec-style">{{ book.cook_name }}<i
+                            class="material-icons right"></i></span>
+                    <span class="card-title" id="rec-style">{{ book.cookbook_name }}</span>
+                    <span>by {{ book.cookbook_chef }}</span>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title" id="rec-style">{{ book.cookbook_name }}<i
+                            class="far fa-times-circle right"></i></span>
+                    <span>Chef: {{ book.cookbook_chef }}</span><br>
+                    <div class="row center-align rec-card">
+                        <a href="#" class="btn-large green waves-effect waves-light">edit</a>
+                        <a href="#" class="btn-large red waves-effect waves-light">delete</a><br>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+
+
+    </div>
+</div>
 
 {% endblock %}
