--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                         <li><a href="#" class="dropdown-trigger" data-target="dropdown2">recipes</a></li>
                         {% if session.user %}
                         <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
-                        <li><a href="{{ url_for('all_books') }}">cookbooks</a></li>
+                        <li><a href="{{ url_for('all_books') }}">bookshop</a></li>
                         <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
                         <li><a href="{{ url_for('logout') }}">log out</a></li>
                         {% else %}
@@ -68,7 +68,7 @@
             <li><a href="{{ url_for('categories') }}">categories</a></li>
             <li><a href="#" class="dropdown-trigger" data-target="dropdown1">recipes</a></li>
             <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
-            <li><a href="{{ url_for('all_books') }}">cookbooks</a></li>
+            <li><a href="{{ url_for('all_books') }}">bookshop</a></li>
             <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
             <li><a href="{{ url_for('logout') }}">log out</a></li>
             <li><a href="{{ url_for('login') }}">log in</a></li>
