--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -37,7 +37,7 @@
                     <span class="card-title" id="rec-style">{{ book.cookbook_name }}</span>
                     <span>by {{ book.cookbook_chef }}</span>
                     <div class="row">
-                        <a href="{{ book.cookbook_amazon }}" class="btn">buy now</a>
+                        <a href="{{ book.cookbook_amazon }}" target="_blank" class="btn">buy now</a>
                     </div>
                 </div>
                 <div class="card-reveal">
