--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col s12 xl3">
+        <div class="col s12">
 
             <h3 class="center-align">recipes</h3>
         </div>
