--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -36,6 +36,11 @@
                             class="material-icons right"></i></span>
                     <span class="card-title" id="rec-style">{{ book.cookbook_name }}</span>
                     <span>by {{ book.cookbook_chef }}</span>
+                    <hr>
+                    <div class="div">
+                        <a href="#" class="btn book">see recipes</a>
+                    </div>
+                    <hr>
                     <div class="row">
                         <a href="{{ book.cookbook_amazon }}" target="_blank" class="btn">buy now</a>
                     </div>
