removed btn class from recipe.js and col class

--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -37,11 +37,9 @@
                     <span class="card-title" id="rec-style">{{ book.cookbook_name }}</span>
                     <span>by {{ book.cookbook_chef }}</span>
                     <hr>
-                    <div class="div">
+                    <div>
                         <a href="#" class="btn book">see recipes</a>
-                    </div>
-                    <hr>
-                    <div class="row">
+                        <span> </span>
                         <a href="{{ book.cookbook_amazon }}" target="_blank" class="btn">buy now</a>
                     </div>
                 </div>
