added pop to remove password on profile screen

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_image" name="recipe_image" type="text" class="validate">
-                    <label for="recipe_image">recipe image</label>
+                    <label for="recipe_image">recipe image - add URL here</label>
                 </div>
                 <div class="col s1"></div>
             </div>
