changed key name in dict to cookbook_name

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -46,8 +46,8 @@
                     <i class="fas fa-book"></i>
                 </div>
                 <div class="input-field col s10">
-                    <input id="recipe_cookbook" name="recipe_cookbook" type="text" class="validate">
-                    <label for="recipe_cookbook">recipe cookbook</label>
+                    <input id="cookbook_name" name="cookbook_name" type="text" class="validate">
+                    <label for="cookbook_name">recipe cookbook</label>
                 </div>
                 <div class="col s1"></div>
             </div>
