--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -50,7 +50,7 @@
                     <i class="fas fa-book" id="icon"></i>
                 </div>
                 <div class="input-field col s10">
-                    <input id="recipe_cookbook" name="recipe_cookbook" value="{{ recipe.recipe_cookbook }}" type="text"
+                    <input id="cookbook_name" name="cookbook_name" value="{{ recipe.cookbook_name }}" type="text"
                         class="validate">
 
                 </div>
