--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -45,7 +45,7 @@
                     <!-- will need to remove ingredients and method-->
                     <span>Category: {{ recipe.category_name }}</span><br>
                     <span>Chef: {{ recipe.recipe_chef }}</span><br>
-                    <span>Cookbook: {{ recipe.recipe_cookbook }}</span><br>
+                    <span>Cookbook: {{ recipe.cookbook_name }}</span><br>
                     <span>Difficulty: {{ recipe.recipe_difficulty }}</span><br>
                     <span>Cooking Time: {{ recipe.recipe_time }}</span>
                     <div class="row center-align rec-card">
