--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -28,7 +28,7 @@
                     <span class="left-align">Cookbook: </span>
                 </div>
                 <div class="col s8">
-                    <span> {{ recipe.recipe_cookbook }}</span><br>
+                    <span> {{ recipe.cookbook_name }}</span><br>
                 </div>
                 <div class="col s4">
                     <span class="left-align">Difficulty: </span>
