--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -24,7 +24,7 @@
                     <!-- will need to remove ingredients and method-->
                     <p> Category: {{ recipe.category_name }}<br>
                         Chef: {{ recipe.recipe_chef }}<br>
-                        Cookbook: {{ recipe.recipe_cookbook }}<br>
+                        Cookbook: {{ recipe.cookbook_name }}<br>
                         Difficulty: {{ recipe.recipe_difficulty }}<br>
                         Cooking Time: {{ recipe.recipe_time }}<br>
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn-large green">edit</a>
