--- a/templates/landing.html
+++ b/templates/landing.html
@@ -13,8 +13,13 @@
                     <li class="left-align"><a class="land-link" href="{{ url_for('all_recipes') }}">recipes from your
                             favourite chef's!</a>
                     </li>
+                    {% if session.user %}
                     <li class="left-align"><a class="land-link" href="{{ url_for('add_recipe') }}">add your own
                             favourites recipes!</a></li>
+                    {% else %}
+                    <li class="left-align"><a class="land-link" href="{{ url_for('login') }}">add your own
+                            favourites recipes!</a></li>
+                    {% endif %}
                     <li class="left-align"><a class="land-link" href="{{ url_for('all_books') }}">look for new
                             cookbooks!</a></li>
                 </ul>
