--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -49,7 +49,7 @@
                     <span>Cookbook: {{ recipe.cookbook_name }}</span><br>
                     <span>Difficulty: {{ recipe.recipe_difficulty }}</span><br>
                     <span>Cooking Time: {{ recipe.recipe_time }}</span>
-                    {% if session.user|lower == recipe.recipe_added|lower or "admin"|lower %}
+                    {% if session.user|lower == recipe.recipe_added|lower or "larder-admin"|lower %}
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}"
                             class="btn-large green waves-effect waves-light">edit</a>
