--- a/templates/cakes.html
+++ b/templates/cakes.html
@@ -4,6 +4,7 @@
 <div class="container">
     <div class="row">
         <h3 class="center-align">cakes & biscuits</h3>
+        <p class="right-align">logged in: {{session.user}}</p>
     </div>
     <div class="row">
         {% for recipe in recipes %}
