--- a/templates/sides.html
+++ b/templates/sides.html
@@ -5,6 +5,7 @@
 <div class="container">
     <div class="row">
         <h3 class="center-align">sides</h3>
+        <p class="right-align">logged in: {{session.user}}</p>
     </div>
 
     <div class="row">
