--- a/templates/categories.html
+++ b/templates/categories.html
@@ -4,6 +4,8 @@
 <div class="container">
     <div class="row">
         <h3 class="center-align">categories</h3>
+        <p class="right-align">logged in: {{session.user}}</p>
+
     </div>
     <div class="col s12 xl9">
         <div class="row">
