--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -4,6 +4,7 @@
 <div class="container">
     <div class="row">
         <h3 class="center-align">cookbooks</h3>
+        <p class="right-align">logged in: {{session.user}}</p>
     </div>
 
     <div class="row card-panel">
