--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -6,6 +6,7 @@
         <div class="col s12">
 
             <h3 class="center-align">recipes</h3>
+            <p class="right-align">logged in: {{session.user}}</p>
         </div>
     </div>
 
