--- a/templates/show_recipe.html
+++ b/templates/show_recipe.html
@@ -7,6 +7,7 @@
 
             <h3 class="center-align">
                 <h3 class="left-align"> {{ recipe.recipe_name }} </h3>
+                <p class="left-align">logged in: {{session.user}}</p>
         </div>
 
         <div class="row">
