--- a/templates/base.html
+++ b/templates/base.html
@@ -106,26 +106,42 @@
         <footer class="page-footer">
             <div class="container">
                 <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">Footer Content</h5>
-                        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer
-                            content.</p>
+                    <div class="col l4 s12 center-align">
+                        <h5 class="white-text">larder</h5>
+                        <p class="grey-text text-lighten-4">a collection of your favourite recipes from your favourite
+                            chef's!</p>
                     </div>
-                    <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Links</h5>
-                        <ul>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                        </ul>
+                    <div class="col l4 s12 center-align">
+                        <h5 class="white-text">social</h5>
+                        <!--Facebook-->
+                        <a class="social" href="http://facebook.com" aria-label="click for IPP on Facebook"
+                            target="_blank">
+                            <i class="fab fa-facebook-f fa-2x" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                        <!--Twitter-->
+                        <a class="social" href="http://twitter.com" aria-label="click for IPP on Twitter"
+                            target="_blank">
+                            <i class="fab fa-twitter fa-2x" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                        <!--Instagram-->
+                        <a class="social" href="http://instagram.com" aria-label="click for IPP on Instagram"
+                            target="_blank">
+                            <i class="fab fa-instagram fa-2x" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </div>
+                    <div class="col l4 s12 center-align">
+                        <h5>contact us</h5>
+                        <p class="email">larder-admin@larder.com</p>
                     </div>
                 </div>
             </div>
             <div class="footer-copyright">
-                <div class="container">
-                    © 2014 Copyright Text
-                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                <div class="container center-align">
+                    © 2021 larder
+
                 </div>
             </div>
         </footer>
