reformatted search bar

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -18,8 +18,10 @@
                     <input type="text" name="query" id="query" class="validate">
                     <label for="query">search</label>
                 </div>
-                <div class="col s12 m4">
-                    <button type="submit" class="btn green">
+            </div>
+            <div class="row center-align">
+                <div class="col s12">
+                    <button type="submit" class="btn">
                         <i class="fas fa-search left"></i>search
                     </button>
                     <a href="{{ url_for('all_recipes') }}" class="red btn">reset</a>
