--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -15,8 +15,10 @@
                     <input type="text" name="query" id="query" class="validate">
                     <label for="query">search</label>
                 </div>
-                <div class="col s12 m4">
-                    <button type="submit" class="btn green">
+            </div>
+            <div class="row center-align">
+                <div class="col s12">
+                    <button type="submit" class="btn">
                         <i class="fas fa-search left"></i>search
                     </button>
                     <a href="{{ url_for('all_recipes') }}" class="red btn">reset</a>
@@ -27,7 +29,7 @@
     <div class="row">
         <p class="center-align">All books supplied via Amazon</p>
         {% for book in cookbooks %}
-        <div class="col s12 m6 xl4">
+        <div class="col s12 m6 xl4 center-align">
             <div class="card large">
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="{{ book.cookbook_image }}">
