center-aligned dropdown menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,25 +46,25 @@
         </div>
 
         <ul id="dropdown1" class="dropdown-content">
-            <li><a href="{{ url_for('all_recipes') }}">all recipes</a></li>
+            <li><a href="{{ url_for('all_recipes') }}" class="center-align">all recipes</a></li>
             <li class="divider"></li>
-            <li><a href="{{ url_for('show_starters') }}">starters</a></li>
-            <li><a href="{{ url_for('show_mains') }}">mains</a></li>
-            <li><a href="{{ url_for('show_desserts') }}">desserts</a></li>
-            <li><a href="{{ url_for('show_sides') }}">sides</a></li>
-            <li><a href="{{ url_for('show_cakes') }}">cakes and biscuits</a></li>
-            <li><a href="{{ url_for('show_drinks') }}">drinks</a></li>
+            <li><a href="{{ url_for('show_starters') }}" class="center-align">starters</a></li>
+            <li><a href="{{ url_for('show_mains') }}" class="center-align">mains</a></li>
+            <li><a href="{{ url_for('show_desserts') }}" class="center-align">desserts</a></li>
+            <li><a href="{{ url_for('show_sides') }}" class="center-align">sides</a></li>
+            <li><a href="{{ url_for('show_cakes') }}" class="center-align">cakes and biscuits</a></li>
+            <li><a href="{{ url_for('show_drinks') }}" class="center-align">drinks</a></li>
         </ul>
 
         <ul id="dropdown2" class="dropdown-content">
-            <li><a href="{{ url_for('all_recipes') }}">all recipes</a></li>
+            <li><a href="{{ url_for('all_recipes') }}" class="center-align">all recipes</a></li>
             <li class="divider"></li>
-            <li><a href="{{ url_for('show_starters') }}">starters</a></li>
-            <li><a href="{{ url_for('show_mains') }}">mains</a></li>
-            <li><a href="{{ url_for('show_desserts') }}">desserts</a></li>
-            <li><a href="{{ url_for('show_sides') }}">sides</a></li>
-            <li><a href="{{ url_for('show_cakes') }}">cakes and biscuits</a></li>
-            <li><a href="{{ url_for('show_drinks') }}">drinks</a></li>
+            <li><a href="{{ url_for('show_starters') }}" class="center-align">starters</a></li>
+            <li><a href="{{ url_for('show_mains') }}" class="center-align">mains</a></li>
+            <li><a href="{{ url_for('show_desserts') }}" class="center-align">desserts</a></li>
+            <li><a href="{{ url_for('show_sides') }}" class="center-align">sides</a></li>
+            <li><a href="{{ url_for('show_cakes') }}" class="center-align">cakes and biscuits</a></li>
+            <li><a href="{{ url_for('show_drinks') }}" class="center-align">drinks</a></li>
         </ul>
 
         <ul class="sidenav" id="mobile-demo">
