--- a/static/css/style.css
+++ b/static/css/style.css
@@ -142,3 +142,31 @@ a.social {
 a.social:hover {
     color: #9ad39c;
 }
+
+/* label color */
+.input-field label {
+    color: #2c642e;
+  }
+  /* label focus color */
+  .input-field input[type=text]:focus + label {
+    color: #2c642e;
+  }
+  /* label underline focus color */
+  .input-field input[type=text]:focus {
+    border-bottom: 1px solid #2c642e;
+    box-shadow: 0 1px 0 0 #2c642e;
+  }
+  /* valid color */
+  .input-field input[type=text].valid {
+    border-bottom: 1px solid #2c642e;
+    box-shadow: 0 1px 0 0 #2c642e;
+  }
+  /* invalid color */
+  .input-field input[type=text].invalid {
+    border-bottom: 1px solid red;
+    box-shadow: 0 1px 0 0 red;
+  }
+  /* icon prefix focus color */
+  .input-field .prefix.active {
+    color: #9ad39c;
+  }
