--- a/templates/register.html
+++ b/templates/register.html
@@ -22,7 +22,7 @@
                 <label for="user_last">last name</label>
             </div>
             <div class="input-field col s12">
-                <i class="fas fa-user-plus prefix"></i>
+                <i class="fas fa-envelope prefix"></i>
                 <input id="user_email" name="user_email" type="text" class="validate">
                 <label for="user_email">user email</label>
             </div>
@@ -32,7 +32,9 @@
                 <label for="password">password</label>
             </div>
             <div class="row">
-                <button type="submit" class="col s12 btn-large">register</button>
+                <div class="col s12">
+                    <button type="submit" class="col s12 btn">register</button>
+                </div>
             </div>
         </div>
     </form>
