amended register.html structure to match login.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -26,13 +26,13 @@
                         </div>
                     </div>
                     <div class="row center-align">
-                        <button type="submit" class="btn btn-login right-align">login</button>
+                        <button type="submit" class="btn btn-login">login</button>
                     </div>
+                </form>
             </div>
         </div>
     </div>
 </div>
-</form>
 </div>
 
 
