--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,7 @@ nav .brand-logo {
     background-color: #2c642e;
     color: white;
     opacity: 0.9;
+    margin-top: 10px;
 }
 
 .fa-hamburger::before {
@@ -145,25 +146,25 @@ a.social:hover {
 
 /* label color */
 .input-field label {
-    color: #2c642e;
+    color: #fff;
   }
   /* label focus color */
   .input-field input[type=text]:focus + label {
-    color: #2c642e;
+    color: #fff;
   }
   /* label underline focus color */
   .input-field input[type=text]:focus {
-    border-bottom: 1px solid #2c642e;
-    box-shadow: 0 1px 0 0 #2c642e;
+    border-bottom: 2px solid #9ad39c;
+    box-shadow: 0 1px 0 0 #9ad39c;
   }
   /* valid color */
   .input-field input[type=text].valid {
-    border-bottom: 1px solid #2c642e;
-    box-shadow: 0 1px 0 0 #2c642e;
+    border-bottom: 2px solid #9ad39c;
+    box-shadow: 0 1px 0 0 #9ad39c;
   }
   /* invalid color */
   .input-field input[type=text].invalid {
-    border-bottom: 1px solid red;
+    border-bottom: 2px solid red;
     box-shadow: 0 1px 0 0 red;
   }
   /* icon prefix focus color */
