--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -15,8 +15,9 @@
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12">
                     <i class="fas fa-search prefix"></i>
-                    <input type="text" name="query" id="query" class="validate">
-                    <label for="query">search</label>
+                    <input type="text" name="query" id="query" class="validate search">
+                    <label for="query" style="color: #2c642e">search by recipe name, chef, ingredients or
+                        difficulty</label>
                 </div>
             </div>
             <div class="row center-align">
